gta04: enable power-off using twl4030.
Signed-off-by: NeilBrown <neilb@suse.de>

--- a/arch/arm/boot/dts/twl4030.dtsi
+++ b/arch/arm/boot/dts/twl4030.dtsi
@@ -25,6 +25,10 @@
 		bci3v1-supply = <&vusb3v1>;
 	};
 
+	twl_power: power {
+		compatible = "ti,twl4030-power";
+	};
+
 	watchdog {
 		compatible = "ti,twl4030-wdt";
 	};
