GTA04 dts: add gpio-keys for 'incoming' signal from Option module.
So we can wake up when a phone call or SMS arrives.

Signed-off-by: NeilBrown <neilb@suse.de>

--- a/arch/arm/boot/dts/omap3-gta04.dtsi
+++ b/arch/arm/boot/dts/omap3-gta04.dtsi
@@ -41,6 +41,17 @@
 		};
 	};
 
+	gpio-keys-incoming {
+		compatible = "gpio-keys";
+
+		incoming: incoming-button {
+			label = "Option";
+			linux,code = <240>;
+			gpios = <&gpio1 10 GPIO_ACTIVE_HIGH>;
+			gpio-key,wakeup;
+		};
+	};
+
 	sound {
 		compatible = "ti,omap-twl4030";
 		ti,model = "gta04";
