--- a/arch/arm/boot/dts/omap3-gta04a3.dts
+++ b/arch/arm/boot/dts/omap3-gta04a3.dts
@@ -46,3 +46,8 @@
 		st,max-limit-z = <32>;
 	};
 };
+
+&incoming {
+	/* incoming in GPIO 176 on the older boards */
+	gpios = <&gpio6 16 GPIO_ACTIVE_HIGH>;
+};
