gta04: enable power-off for wifi card.
Signed-off-by: NeilBrown <neilb@suse.de>

--- a/arch/arm/boot/dts/omap3-gta04.dtsi
+++ b/arch/arm/boot/dts/omap3-gta04.dtsi
@@ -352,6 +352,7 @@
 	vmmc-supply = <&vaux4>;
 	bus-width = <4>;
 	ti,non-removable;
+	cap-power-off-card;
 	reset-gpios = <&tca 0 GPIO_ACTIVE_LOW>;
 };
 
